<resources>
    <string name="app_name">SmsForward</string>
    <string name="request_sms_permission">Request SMS Permission</string>
    <string name="permission_granted">Permission Granted</string>
    <string name="forward_service">Forward Service</string>
    <string name="action_settings">Settings</string>
    <string name="turn_on_service">Turn on Sms Forward</string>
    <string name="turn_off_service">Turn off Sms Forward</string>
    <string name="slack">Slack</string>
    <string name="feige">Feige</string>
    <string name="feige_uid">feige_uid</string>
    <string name="feige_secret">feige_secret</string>
    <string name="slack_token">slack_token</string>
    <string name="slack_channel">slack_channel</string>
    <string name="phone_number">phone_number</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="slack_checkbox_preference" translatable="false">slack_checkbox_preference</string>
    <string name="feige_checkbox_preference" translatable="false">feige_checkbox_preference</string>
    <string name="direct_sms_checkbox_preference" translatable="false">direct_sms_checkbox_preference</string>
    <string name="direct_sms">direct_sms</string>
    <string name="direct_sms_detail">direct_sms_detail</string>
    <string name="unvalid_config">unvalid_config</string>
</resources>
