<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="baishuai.github.io.smsforward.ui.MainActivity">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp">


        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline"
            app:layout_constraintGuide_begin="60dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteY="81dp"
            tools:layout_editor_absoluteX="60dp" />

        <TextView
            android:id="@+id/tv_slack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/slack"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_slack_channel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/slack_channel"
            android:inputType="textPersonName"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/guideline"
            app:layout_constraintRight_toLeftOf="@+id/guideline_right"
            app:layout_constraintTop_toBottomOf="@+id/et_slack_token"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1" />

        <EditText
            android:id="@+id/et_slack_token"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/slack_token"
            android:inputType="textPersonName"
            app:layout_constraintLeft_toLeftOf="@+id/guideline"
            app:layout_constraintRight_toLeftOf="@+id/guideline_right"
            app:layout_constraintTop_toBottomOf="@+id/tv_slack"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1" />

        <TextView
            android:id="@+id/tv_feige"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/feige"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/et_slack_channel" />

        <CheckBox
            android:id="@+id/cb_send_sms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="85dp"
            android:layout_marginLeft="85dp"
            android:layout_marginRight="85dp"
            android:layout_marginStart="85dp"
            android:layout_marginTop="32dp"
            android:text="CheckBox"
            android:visibility="invisible"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="@+id/guideline"
            app:layout_constraintRight_toLeftOf="@+id/guideline_right"
            app:layout_constraintTop_toBottomOf="@+id/et_feige_uid"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1" />

        <android.support.constraint.Guideline
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/guideline_right"
            app:layout_constraintGuide_end="60dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteY="81dp"
            tools:layout_editor_absoluteX="324dp" />

        <CheckBox
            android:id="@+id/cb_slack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="CheckBox"
            app:layout_constraintBottom_toTopOf="@+id/et_slack_token"
            app:layout_constraintRight_toLeftOf="@+id/guideline_right"
            tools:layout_constraintBottom_creator="1" />

        <CheckBox
            android:id="@+id/cb_feige"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="CheckBox"
            app:layout_constraintBottom_toTopOf="@+id/et_feige_token"
            app:layout_constraintRight_toLeftOf="@+id/guideline_right"
            tools:layout_constraintBottom_creator="1" />

        <EditText
            android:id="@+id/et_feige_token"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/feige_secret"
            android:inputType="textPersonName"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/guideline"
            app:layout_constraintRight_toLeftOf="@+id/guideline_right"
            app:layout_constraintTop_toBottomOf="@+id/tv_feige" />

        <EditText
            android:id="@+id/et_feige_uid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/feige_uid"
            android:inputType="textPersonName"
            app:layout_constraintLeft_toLeftOf="@+id/guideline"
            app:layout_constraintRight_toLeftOf="@+id/guideline_right"
            app:layout_constraintTop_toBottomOf="@+id/et_feige_token" />

    </android.support.constraint.ConstraintLayout>

</layout>

